# spotmicro_description

./: CMakeLists.txt  README.md  package.xml
config/: ros_gz_bridge.yaml
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/spotmicro_description_temp/share/spotmicro_description_temp/: package.bash  package.zsh
launch/: joint_test.launch.py  lidar.launch.py  show_model.launch.py  sim.launch.py  slam.launch.py
log/: latest_build
rviz/: spotmicro.rviz  spotmicro_slam.rviz
scripts/: spotmicro_cmdvel_pub_gui.py  spotmicro_crawl_controller.py  spotmicro_force_test.py  spotmicro_high_level_controller.py  spotmicro_joint_force_gui.py  spotmicro_kinematics.py  spotmicro_low_level_controller.py  spotmicro_odometry_publisher.py  spotmicro_pose_controller.py  spotmicro_pose_pub_gui.py  spotmicro_reference.py  spotmicro_trajectory_planner.py
urdf/: spotmicro.ros2_control.xacro  spotmicro.urdf.xacro
worlds/: custom_environment.sdf  depot.sdf  joint_test.sdf
